{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 195,
  "lineage": "34173b92-5d1d-4a88-386c-829bf96b13f8",
  "resources": [
    {
      "module": "module.helm_addons",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd/argocd-server",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/ssl-redirect": "false"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "argocd-server",
                "namespace": "argocd",
                "resource_version": "1329913",
                "uid": "332ebfc8-4ac4-418b-b041-e13bfc52307f"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "argocd-server",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/argocd",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "144.24.87.151"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "argocd-server",
            "namespace": "argocd"
          },
          "dependencies": [
            "module.helm_addons.helm_release.argocd",
            "module.helm_addons.helm_release.nginx_ingress",
            "module.helm_addons.kubernetes_namespace_v1.argocd",
            "module.helm_addons.kubernetes_namespace_v1.nginx_ingress",
            "module.network.data.oci_core_services.all",
            "module.network.oci_core_internet_gateway.main",
            "module.network.oci_core_nat_gateway.main",
            "module.network.oci_core_route_table.private",
            "module.network.oci_core_route_table.public",
            "module.network.oci_core_security_list.api",
            "module.network.oci_core_security_list.lb",
            "module.network.oci_core_security_list.workers",
            "module.network.oci_core_service_gateway.main",
            "module.network.oci_core_subnet.api",
            "module.network.oci_core_subnet.lb",
            "module.network.oci_core_subnet.workers",
            "module.network.oci_core_vcn.main",
            "module.oke.data.oci_containerengine_cluster_kube_config.kube_config",
            "module.oke.data.oci_identity_availability_domains.ad",
            "module.oke.data.oci_identity_availability_domains.ads",
            "module.oke.null_resource.kubeconfig",
            "module.oke.oci_containerengine_cluster.main",
            "module.oke.oci_containerengine_node_pool.main",
            "module.oke.time_sleep.wait_for_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.helm_addons",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/prometheus",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "false"
                },
                "generate_name": "",
                "generation": 2,
                "labels": {},
                "name": "prometheus",
                "namespace": "monitoring",
                "resource_version": "1342875",
                "uid": "8969afaa-681f-48b9-9ba0-49f662327509"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "kube-prometheus-stack-prometheus",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 9090
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/prometheus(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "144.24.87.151"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "prometheus",
            "namespace": "monitoring"
          },
          "dependencies": [
            "module.helm_addons.helm_release.kube_prometheus_stack",
            "module.helm_addons.helm_release.nginx_ingress",
            "module.helm_addons.kubernetes_namespace_v1.monitoring",
            "module.helm_addons.kubernetes_namespace_v1.nginx_ingress",
            "module.network.data.oci_core_services.all",
            "module.network.oci_core_internet_gateway.main",
            "module.network.oci_core_nat_gateway.main",
            "module.network.oci_core_route_table.private",
            "module.network.oci_core_route_table.public",
            "module.network.oci_core_security_list.api",
            "module.network.oci_core_security_list.lb",
            "module.network.oci_core_security_list.workers",
            "module.network.oci_core_service_gateway.main",
            "module.network.oci_core_subnet.api",
            "module.network.oci_core_subnet.lb",
            "module.network.oci_core_subnet.workers",
            "module.network.oci_core_vcn.main",
            "module.oke.data.oci_containerengine_cluster_kube_config.kube_config",
            "module.oke.data.oci_identity_availability_domains.ad",
            "module.oke.data.oci_identity_availability_domains.ads",
            "module.oke.null_resource.kubeconfig",
            "module.oke.oci_containerengine_cluster.main",
            "module.oke.oci_containerengine_node_pool.main",
            "module.oke.time_sleep.wait_for_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.helm_addons",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "root_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd/root-redirect",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/permanent-redirect": "/argocd/",
                  "nginx.ingress.kubernetes.io/permanent-redirect-code": "308",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "false"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "root-redirect",
                "namespace": "argocd",
                "resource_version": "1329912",
                "uid": "f49bcc91-464c-466f-816f-fb019dfa6d8f"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "argocd-server",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Exact"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "144.24.87.151"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "root-redirect",
            "namespace": "argocd"
          },
          "dependencies": [
            "module.helm_addons.helm_release.argocd",
            "module.helm_addons.helm_release.nginx_ingress",
            "module.helm_addons.kubernetes_namespace_v1.argocd",
            "module.helm_addons.kubernetes_namespace_v1.nginx_ingress",
            "module.network.data.oci_core_services.all",
            "module.network.oci_core_internet_gateway.main",
            "module.network.oci_core_nat_gateway.main",
            "module.network.oci_core_route_table.private",
            "module.network.oci_core_route_table.public",
            "module.network.oci_core_security_list.api",
            "module.network.oci_core_security_list.lb",
            "module.network.oci_core_security_list.workers",
            "module.network.oci_core_service_gateway.main",
            "module.network.oci_core_subnet.api",
            "module.network.oci_core_subnet.lb",
            "module.network.oci_core_subnet.workers",
            "module.network.oci_core_vcn.main",
            "module.oke.data.oci_containerengine_cluster_kube_config.kube_config",
            "module.oke.data.oci_identity_availability_domains.ad",
            "module.oke.data.oci_identity_availability_domains.ads",
            "module.oke.null_resource.kubeconfig",
            "module.oke.oci_containerengine_cluster.main",
            "module.oke.oci_containerengine_node_pool.main",
            "module.oke.time_sleep.wait_for_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.helm_addons",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "terraform"
                },
                "name": "argocd",
                "resource_version": "203706",
                "uid": "4752338e-c7bc-4519-bd81-dbef6f170271"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "argocd"
          },
          "dependencies": [
            "module.network.data.oci_core_services.all",
            "module.network.oci_core_internet_gateway.main",
            "module.network.oci_core_nat_gateway.main",
            "module.network.oci_core_route_table.private",
            "module.network.oci_core_route_table.public",
            "module.network.oci_core_security_list.api",
            "module.network.oci_core_security_list.lb",
            "module.network.oci_core_security_list.workers",
            "module.network.oci_core_service_gateway.main",
            "module.network.oci_core_subnet.api",
            "module.network.oci_core_subnet.lb",
            "module.network.oci_core_subnet.workers",
            "module.network.oci_core_vcn.main",
            "module.oke.data.oci_containerengine_cluster_kube_config.kube_config",
            "module.oke.data.oci_identity_availability_domains.ad",
            "module.oke.data.oci_identity_availability_domains.ads",
            "module.oke.null_resource.kubeconfig",
            "module.oke.oci_containerengine_cluster.main",
            "module.oke.oci_containerengine_node_pool.main",
            "module.oke.time_sleep.wait_for_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.helm_addons",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "terraform"
                },
                "name": "monitoring",
                "resource_version": "1245994",
                "uid": "d7618560-8c31-4132-b444-7d2e8180bf3b"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "monitoring"
          },
          "dependencies": [
            "module.network.data.oci_core_services.all",
            "module.network.oci_core_internet_gateway.main",
            "module.network.oci_core_nat_gateway.main",
            "module.network.oci_core_route_table.private",
            "module.network.oci_core_route_table.public",
            "module.network.oci_core_security_list.api",
            "module.network.oci_core_security_list.lb",
            "module.network.oci_core_security_list.workers",
            "module.network.oci_core_service_gateway.main",
            "module.network.oci_core_subnet.api",
            "module.network.oci_core_subnet.lb",
            "module.network.oci_core_subnet.workers",
            "module.network.oci_core_vcn.main",
            "module.oke.data.oci_containerengine_cluster_kube_config.kube_config",
            "module.oke.data.oci_identity_availability_domains.ad",
            "module.oke.data.oci_identity_availability_domains.ads",
            "module.oke.null_resource.kubeconfig",
            "module.oke.oci_containerengine_cluster.main",
            "module.oke.oci_containerengine_node_pool.main",
            "module.oke.time_sleep.wait_for_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.helm_addons",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "nginx_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "terraform"
                },
                "name": "ingress-nginx",
                "resource_version": "203703",
                "uid": "497aa5dc-aa96-475a-a4bf-af2b45418848"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "ingress-nginx"
          },
          "dependencies": [
            "module.network.data.oci_core_services.all",
            "module.network.oci_core_internet_gateway.main",
            "module.network.oci_core_nat_gateway.main",
            "module.network.oci_core_route_table.private",
            "module.network.oci_core_route_table.public",
            "module.network.oci_core_security_list.api",
            "module.network.oci_core_security_list.lb",
            "module.network.oci_core_security_list.workers",
            "module.network.oci_core_service_gateway.main",
            "module.network.oci_core_subnet.api",
            "module.network.oci_core_subnet.lb",
            "module.network.oci_core_subnet.workers",
            "module.network.oci_core_vcn.main",
            "module.oke.data.oci_containerengine_cluster_kube_config.kube_config",
            "module.oke.data.oci_identity_availability_domains.ad",
            "module.oke.data.oci_identity_availability_domains.ads",
            "module.oke.null_resource.kubeconfig",
            "module.oke.oci_containerengine_cluster.main",
            "module.oke.oci_containerengine_node_pool.main",
            "module.oke.time_sleep.wait_for_nodes"
          ]
        }
      ]
    }
  ]
}